--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -55,11 +55,11 @@
         }, 5000); // <-- time in milliseconds, 1000 =  1 sec
     });
 </script>
-<body id="main" style="background-color: aliceblue;" class="leading-normal tracking-normal text-grey-800 gradient" style="font-family: 'Source Sans Pro', sans-serif;" >
+<body id="main" style="background-color: #E0F9F0;" class="leading-normal tracking-normal text-grey-800 gradient" style="font-family: 'Source Sans Pro', sans-serif;" >
 	{% if messages %}
 	<ul class="messages">
 		{% for message in messages %}
-		<div class="p-4 mb-4 text-sm text-steunkleur-800 rounded-lg bg-steunkleur-50  " role="alert">
+		<div class="p-4 mb-4 text-sm text-blue-800 rounded-lg bg-blue-50  " role="alert">
 			<span class="font-medium">Info alert!</span> {{ message }}
 		  </div>
 		{% endfor %}
@@ -80,7 +80,7 @@
 		<img src="{% static '/images/mapmaker_logo.png' %}" class="h-6 mr-3 sm:h-9" alt="mapmaker Logo" />
 	</a>
 	<a href="/workshop/share/{{workshop_secret}}">
-		<button type="button" class="text-white bg-steunkleur-700 hover:bg-steunkleur-800 focus:ring-4 focus:ring-steunkleur-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2  dark:hover:bg-steunkleur-700 focus:outline-none dark:focus:ring-steunkleur-800">Share</button>
+		<button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2  dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Share</button>
 	</a>
 	{% else%}
 	<a href="/" class="flex items-center">
@@ -88,7 +88,7 @@
 	</a>
 	{% if workshop_secret %}
 	<a href="/workshop/share/{{workshop_secret}}">
-		<button type="button" class="text-white bg-steunkleur-700 hover:bg-steunkleur-800 focus:ring-4 focus:ring-steunkleur-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2  dark:hover:bg-steunkleur-700 focus:outline-none dark:focus:ring-steunkleur-800">Share</button>
+		<button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2  dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Share</button>
 	</a>
 	{% endif %}
 	{% endif %}
@@ -96,7 +96,7 @@
 	{% endif %}
 	<div id="spinner" class="htmx-indicator p-5">
 		<div role="status">
-		  <svg aria-hidden="true" class="w-8 h-8 mr-2 text-gray-200 animate-spin  fill-steunkleur-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+		  <svg aria-hidden="true" class="w-8 h-8 mr-2 text-gray-200 animate-spin  fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
 			  <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
 			  <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
 		  </svg>
@@ -113,43 +113,43 @@
 		
 		{% if user.is_authenticated%}
 		<li>
-			<a href="/dashboard" class="block py-2 pl-3 pr-4 text-white bg-steunkleur-700 rounded md:bg-transparent md:text-steunkleur-700 md:p-0 " aria-current="page">Dashboard</a>
+			<a href="/dashboard" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 " aria-current="page">Dashboard</a>
 		</li>
 		{% if workshop.workshop_owner == user %}
 		<li>
-			<a href="/workshop/settings" class="block py-2 pl-3 pr-4 text-white bg-steunkleur-700 rounded md:bg-transparent md:text-steunkleur-700 md:p-0 " aria-current="page">Workshop settings</a>
+			<a href="/workshop/settings" class="block py-2 pl-3 pr-4 text-steunkleur bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 " aria-current="page">Workshop settings</a>
 		</li>
 		{% endif%}
 		<li>
-			<a href="/user/profile" class="block py-2 pl-3 pr-4 text-white bg-steunkleur-700 rounded md:bg-transparent md:text-steunkleur-700 md:p-0 " aria-current="page">Profile</a>
+			<a href="/user/profile" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 " aria-current="page">Profile</a>
 		</li>
 		<li>
-		<a href="/user/logout" class="block py-2 pl-3 pr-4 text-white bg-steunkleur-700 rounded md:bg-transparent md:text-steunkleur-700 md:p-0 " aria-current="page">Log out</a>
+		<a href="/user/logout" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 " aria-current="page">Log out</a>
 		</li>
 		{% else %}
 		{% if workshop_secret %}
 		<li>
-			<a href="/user/register/{{workshop_secret}}" class="block py-2 pl-3 pr-4 text-white bg-steunkleur-700 rounded md:bg-transparent md:text-steunkleur-700 md:p-0 " aria-current="page">Complete registration to edit</a>
+			<a href="/user/register/{{workshop_secret}}" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 " aria-current="page">Complete registration to edit</a>
 		</li>
 
 		{% else%}
 		<li>
-			<a href="/user/login" class="block py-2 pl-3 pr-4 text-white bg-steunkleur-700 rounded md:bg-transparent md:text-steunkleur-700 md:p-0 " aria-current="page">Log in</a>
+			<a href="/user/login" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 " aria-current="page">Log in</a>
 		</li>
 		{% endif %}
 		{% endif %}
 	
 		<!--  <li>
-		<a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-steunkleur-700 md:p-0  md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
+		<a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0  md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
 		</li>
 		<li>
-		<a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-steunkleur-700 md:p-0  md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
+		<a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0  md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
 		</li>
 		<li>
-		<a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-steunkleur-700 md:p-0  md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Pricing</a>
+		<a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0  md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Pricing</a>
 		</li>
 		<li>
-		<a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-steunkleur-700 md:p-0  md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
+		<a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0  md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
 		</li> -->
 
 	</ul>
@@ -163,7 +163,7 @@
 
 	{% if not user.is_authenticated %}
 	{% if not workshop_secret %}
-		<footer style="background-color: aliceblue;" class="p-4 bg-white sm:p-6 ">
+		<footer style="background-color: #E0F9F0;" class="p-4 bg-white sm:p-6 ">
     <div class="mx-auto max-w-screen-xl">
         <div class="md:flex md:justify-between">
             <div class="mb-6 md:mb-0">
@@ -178,7 +178,7 @@
 						<img src="{% static '/images/mapmaker_logo.png' %}" class="h-6 mr-3 sm:h-9" alt="mapmaker Logo" />
 					</a>
 					<a href="/workshop/share/{{workshop_secret}}">
-						<button type="button" class="text-white bg-steunkleur-700 hover:bg-steunkleur-800 focus:ring-4 focus:ring-steunkleur-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2  dark:hover:bg-steunkleur-700 focus:outline-none dark:focus:ring-steunkleur-800">Share</button>
+						<button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2  dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Share</button>
 					</a>
 					{% else%}
 					<a href="/" class="flex items-center">
@@ -186,7 +186,7 @@
 					</a>
 					{% if workshop_secret %}
 					<a href="/workshop/share/{{workshop_secret}}">
-						<button type="button" class="text-white bg-steunkleur-700 hover:bg-steunkleur-800 focus:ring-4 focus:ring-steunkleur-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2  dark:hover:bg-steunkleur-700 focus:outline-none dark:focus:ring-steunkleur-800">Share</button>
+						<button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2  dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Share</button>
 					</a>
 					{% endif %}
 					{% endif %}
@@ -356,7 +356,7 @@
 		var sortable = sortables[i];
 		new Sortable(sortable, {
 			animation: 150,
-			ghostClass: 'steunkleur-background-class',
+			ghostClass: 'blue-background-class',
 			multiDrag: true, // Enable multi-drag
 			selectedClass: 'selected', // The class applied to the selected items
 			fallbackTolerance: 3, // So that we can select items on mobile
