--- a/src/users/templates/register.html
+++ b/src/users/templates/register.html
@@ -20,14 +20,14 @@
   
           <div class="text-sm">
             <div class="flex items-center">
-              <input disabled checked id="disabled-checked-checkbox" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+              <input disabled checked id="disabled-checked-checkbox" type="checkbox" value="" class="w-4 h-4 text-steunkleur-600 bg-gray-100 border-gray-300 rounded focus:ring-steunkleur-500 dark:focus:ring-steunkleur-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
               <label for="checked-checkbox" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">I accept terms and condition and privacy policy</label>
           </div>
           </div>
         </div><br>
-          <button type="submit" class="group relative flex w-full justify-center rounded-md border border-transparent bg-indigo-700 py-2 px-4 text-sm font-medium text-white hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+          <button type="submit" class="group relative flex w-full justify-center rounded-md border border-transparent bg-steunkleur-700 py-2 px-4 text-sm font-medium text-white hover:bg-steunkleur-400 focus:outline-none focus:ring-2 focus:ring-steunkleur-500 focus:ring-offset-2">
             <span class="absolute inset-y-0 left-0 flex items-center pl-3">
-              <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <svg class="h-5 w-5 text-steunkleur-500 group-hover:text-steunkleur-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
               </svg>
             </span>
@@ -38,13 +38,13 @@
         </div>
       </form>
       <a href="/dashboard/guest/{{workshop_secret}}">
-      <button  class="group relative flex w-full justify-center rounded-md py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">
+      <button  class="group relative flex w-full justify-center rounded-md py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-steunkleur-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">
               View workshop without creating a account
       </button>
       
       </a>
       <a href="/user/login">
-        <button  class="group relative flex w-full justify-center rounded-md py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">
+        <button  class="group relative flex w-full justify-center rounded-md py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-steunkleur-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">
                 I already have a account
         </button>
         </a>
