--- a/src/card_interactions/templates/create_card.html
+++ b/src/card_interactions/templates/create_card.html
@@ -12,7 +12,7 @@
                     {% csrf_token %}
                     {{ form }}
                     <!--<input type="submit" value="Submit"> -->
-                    <button type="submit" class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center  dark:hover:bg-blue-700 dark:focus:ring-blue-800">Create new card</button>
+                    <button type="submit" class="w-full text-white bg-steunkleur-700 hover:bg-steunkleur-800 focus:ring-4 focus:outline-none focus:ring-steunkleur-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center  dark:hover:bg-steunkleur-700 dark:focus:ring-steunkleur-800">Create new card</button>
 
                 </form>
             
