--- a/src/homepage/templates/sign_up_marketing.html
+++ b/src/homepage/templates/sign_up_marketing.html
@@ -5,7 +5,7 @@
           {% csrf_token %}
           {{form.as_p}}
           <br>       <br>
-          <button type="submit" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
+          <button type="submit" class="inline-flex justify-center items-center bg-steunkleur-700 hover:bg-steunkleur-800 py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-steunkleur-700 hover:bg-steunkleur-800 focus:ring-4 focus:ring-steunkleur-300 dark:focus:ring-steunkleur-900">
             <span class="absolute inset-y-0 left-0 flex items-center pl-3">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" class="w-5 h-5 text-white "><path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path><path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path></svg>
             </span>
