--- a/src/users/templates/user_profile_table_edit.html
+++ b/src/users/templates/user_profile_table_edit.html
@@ -23,5 +23,5 @@
       <input type="text" name="linkedin" value="{{user.linkedin}}" class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">
     </div>
 </dl>
-<button class="inline-flex items-center px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  dark:hover:bg-blue-700 dark:focus:ring-blue-800">Save</button>
+<button class="inline-flex items-center px-4 py-2 text-sm font-medium text-center text-white bg-steunkleur-700 rounded-lg hover:bg-steunkleur-800 focus:ring-4 focus:outline-none focus:ring-steunkleur-300  dark:hover:bg-steunkleur-700 dark:focus:ring-steunkleur-800">Save</button>
   </form> 
