--- a/src/users/templates/userprofile.html
+++ b/src/users/templates/userprofile.html
@@ -37,7 +37,7 @@
                         </li>
                     </ul>
                     <div class="flex mt-4 space-x-3 md:mt-6">
-                        <a href="#" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2  dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Upload picture</a>
+                        <a href="#" class="text-white bg-steunkleur-700 hover:bg-steunkleur-800 focus:ring-4 focus:ring-steunkleur-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2  dark:hover:bg-steunkleur-700 focus:outline-none dark:focus:ring-steunkleur-800">Upload picture</a>
                     </div>
                 
                     </div>
@@ -54,7 +54,7 @@
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
         <div hx-target="this" hx-indicator="#spinner" hx-swap="outerHTML" class="border-t border-gray-200 ">
             {% include 'user_profile_table.html' with user=user%}
-            <button hx-indicator="#spinner" hx-get="profile/{{user.id}}/edit" class="m-4 inline-flex items-center px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  dark:hover:bg-blue-700 dark:focus:ring-blue-800" >
+            <button hx-indicator="#spinner" hx-get="profile/{{user.id}}/edit" class="m-4 inline-flex items-center px-4 py-2 text-sm font-medium text-center text-white bg-steunkleur-700 rounded-lg hover:bg-steunkleur-800 focus:ring-4 focus:outline-none focus:ring-steunkleur-300  dark:hover:bg-steunkleur-700 dark:focus:ring-steunkleur-800" >
                 Click To Edit
             </button>
             <button type="button" hx-indicator="#spinner" hx-get="/user/{{user.id}}/delete" hx-target="#main" hx-confirm="Are you sure you wish to delete your account? This cannot be reversed" class="m-4 py-2.5  text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-xs px-5 text-center   dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900">Delete account</button>
