--- a/src/workshop/templates/workshop_settings.html
+++ b/src/workshop/templates/workshop_settings.html
@@ -6,13 +6,13 @@
 <div class="p-8 w-12/12 mx-8 bg-white border border-gray-200 rounded-lg shadow  ">
 <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Workshop settings: {{workshop}}</h1>
 <p class="mt-6 text-lg leading-8 text-gray-600">View and edit your workshop, view participants and invite new participants to join! </p>
-<button type="button" onclick="location.href = '/dashboard/download';" hx-indicator="#spinner" hx-confirm="Do you want to download a image of your session?"   class="py-2.5 px-5 m-4 mr-2 mb-2 text-xs font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">
+<button type="button" onclick="location.href = '/dashboard/download';" hx-indicator="#spinner" hx-confirm="Do you want to download a image of your session?"   class="py-2.5 px-5 m-4 mr-2 mb-2 text-xs font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-steunkleur-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">
     Download image of session
 </button>
 
     <div class="sm:hidden">
         <label for="tabs" class="sr-only">Select tab</label>
-        <select id="tabs" class="bg-gray-50 border-0 border-b border-gray-200 text-gray-900 text-sm rounded-t-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5     dark:focus:ring-blue-500 dark:focus:border-blue-500">
+        <select id="tabs" class="bg-gray-50 border-0 border-b border-gray-200 text-gray-900 text-sm rounded-t-lg focus:ring-steunkleur-500 focus:border-steunkleur-500 block w-full p-2.5     dark:focus:ring-steunkleur-500 dark:focus:border-steunkleur-500">
             <option>Participant overview</option>
             <option>Share</option>
             <option>Details</option>
@@ -71,9 +71,9 @@
             <p>Share {{workshop}} with others in your organisation, all they need is this link.</p>
             <div>
                 <br>
-                <input type="text" readonly value="https://mapmaker.nl/dashboard/guest/{{workshop_secret}}" id="myInput" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5     dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                
-                <button  onclick="copyurltoclipboard()" class="group relative flex w-full justify-center rounded-md border border-transparent bg-indigo-700 py-2 px-4 text-sm font-medium text-white hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+                <input type="text" readonly value="https://mapmaker.nl/dashboard/guest/{{workshop_secret}}" id="myInput" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-steunkleur-500 focus:border-steunkleur-500 block w-full p-2.5     dark:focus:ring-steunkleur-500 dark:focus:border-steunkleur-500">
+                <br>
+                <button  onclick="copyurltoclipboard()" class="group relative flex w-full justify-center rounded-md border border-transparent bg-steunkleur-700 py-2 px-4 text-sm font-medium text-white hover:bg-steunkleur-400 focus:outline-none focus:ring-2 focus:ring-steunkleur-500 focus:ring-offset-2">
                 Copy link to {{workshop}} to your clipboard
                 </button>
                 <p id="helper-text-explanation" class="mt-2 text-sm text-gray-500 ">Beware: anyone with this link can view your workshop.</p>
