added caching to config

--- a/src/homepage/templates/homepage.html
+++ b/src/homepage/templates/homepage.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <!--Hero-->
-<section style="background-color: #E0F9F0;">
+<section style="background-color: #F7F7F7;">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 grid lg:grid-cols-2 gap-8 lg:gap-16">
       <div class="flex flex-col justify-center">
           <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">Keep the discussion going after the workshop is done</h1>
