--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -55,7 +55,7 @@
         }, 5000); // <-- time in milliseconds, 1000 =  1 sec
     });
 </script>
-<body id="main" style="background-color: #E0F9F0;" class="leading-normal tracking-normal text-grey-800 gradient" style="font-family: 'Source Sans Pro', sans-serif;" >
+<body id="main" style="background-color: #F7F7F7;" class="leading-normal tracking-normal text-grey-800 gradient" style="font-family: 'Source Sans Pro', sans-serif;" >
 	{% if messages %}
 	<ul class="messages">
 		{% for message in messages %}
