--- a/src/card_interactions/templates/edit_description.html
+++ b/src/card_interactions/templates/edit_description.html
@@ -2,6 +2,6 @@
 <form hx-post="/card/{{ cardid }}/edit/description/" hx-indicator="#spinner" hx-target="this"  hx-swap="outerHTML">
   {% csrf_token %}
   {{ form }}
-  <button class="my-4 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-steunkleur-700 rounded-lg hover:bg-steunkleur-800 focus:ring-4 focus:outline-none focus:ring-steunkleur-300  dark:hover:bg-steunkleur-700 dark:focus:ring-steunkleur-800">Submit</button>
+  <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit</button>
   <button class="btn" hx-indicator="#spinner" hx-get="/contact/1">Cancel</button>
 </form> 
