--- a/src/card_interactions/templates/resources.html
+++ b/src/card_interactions/templates/resources.html
@@ -23,7 +23,7 @@
                     {% if resource.owner == request.user %}
                     by you
                             <button type="button" hx-indicator="#spinner" hx-confirm="Are you sure you wish to delete this resource?" hx-target="#resources" hx-swap="outerHTML" hx-DELETE="/card/{{ id }}/resource/{{resource.id}}/delete/" class="py-2.5 px-5 m-4 mr-2 mb-2 text-xs font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-steunkleur-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">
-                                <i class="fa-regular fa-trash"></i><br> 
+                                Delete 
                             </button>
                     {% else %}
                     <div class=" p-2 inline-flex items-center text-base text-gray-900 ">
@@ -42,6 +42,8 @@
         {% endfor %}        
     </ul>
     {% if user.is_authenticated %}
-    <button hx-get="/card/{{ id }}/resource/create" hx-trigger="click" hx-target="#modal" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">add  resource</button>
+    <div id="addresource">
+    <button hx-get="/card/{{ id }}/resource/create" hx-trigger="click" hx-target="#addresource" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">add  resource</button>
     {% endif %}
+    </div>
 </div>
