--- a/src/card_interactions/templates/typecomment.html
+++ b/src/card_interactions/templates/typecomment.html
@@ -17,7 +17,7 @@
         </div>
     </div>
  </form>
- <p class="px-4 ml-auto text-xs text-gray-500 ">Remember, contributions to this topic should follow our <a href="#" class="text-steunkleur-600  hover:underline">Community Guidelines</a>.</p>
+ <p class="px-4 ml-auto text-xs text-gray-500 ">Remember, contributions to this topic should follow our <a href="#" class="text-gray-600  hover:underline">Community Guidelines</a>.</p>
  {% else%}
  <div class="p-4 w-full mb-40 border border-gray-200 rounded-lg bg-gray-50  ">
  </div>
