--- a/src/card_interactions/templates/comment.html
+++ b/src/card_interactions/templates/comment.html
@@ -19,7 +19,7 @@
                         {{comment.comment_text}}                    </p>
                 </div>
                 {% if comment.author == request.user %}
-                <button type="button" hx-indicator="#spinner" hx-confirm="Are you sure you wish to delete your comment?" hx-target="#comments" hx-swap="outerHTML" hx-DELETE="/card/{{ id }}/comment/{{comment.id}}/delete/" class="py-2.5 px-5 m-4 mr-2 mb-2 text-xs font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-steunkleur-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">
+                <button type="button" hx-indicator="#spinner" hx-confirm="Are you sure you wish to delete your comment?" hx-target="#comments" hx-swap="outerHTML" hx-DELETE="/card/{{ id }}/comment/{{comment.id}}/delete/" class="py-2.5 px-5 m-4 mr-2 mb-2 text-xs font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-gray-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">
                     delete                
                 </button>
                 {% endif %}
