--- a/src/card_interactions/templates/create_card.html
+++ b/src/card_interactions/templates/create_card.html
@@ -12,7 +12,7 @@
                     {% csrf_token %}
                     {{ form }}
                     <!--<input type="submit" value="Submit"> -->
-                    <button type="submit" class="w-full text-white bg-steunkleur-700 hover:bg-steunkleur-800 focus:ring-4 focus:outline-none focus:ring-steunkleur-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center  dark:hover:bg-steunkleur-700 dark:focus:ring-steunkleur-800">Create new card</button>
+                    <button type="submit" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Create new card</button>
 
                 </form>
             
