--- a/src/card_interactions/templates/drawer.html
+++ b/src/card_interactions/templates/drawer.html
@@ -18,7 +18,7 @@
             close
         </a>
         <a href="/user/register/{{workshop_secret}}">
-            <button type="button" hx-indicator="#spinner" hx-get="close"  hx-target="#drawer" class="py-2.5 px-5 m-4 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-steunkleur-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">Create account to edit</button>
+            <button type="button" hx-indicator="#spinner" hx-get="close"  hx-target="#drawer" class="py-2.5 px-5 m-4 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-gray-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">Create account to edit</button>
         </a>
         {% endif %}
     </div>
