--- a/src/users/templates/password_reset_completed.html
+++ b/src/users/templates/password_reset_completed.html
@@ -10,7 +10,7 @@
         <h1 class="mt-6 text-center text-3xl font-bold tracking-tight text-gray-800">Password reset succesfully</h1>
         <p>Log in to your account</p>
         <a href="/user/login">
-          <button class="w-full text-white bg-steunkleur-700 hover:bg-steunkleur-800 focus:ring-4 focus:outline-none focus:ring-steunkleur-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center  dark:hover:bg-steunkleur-700 dark:focus:ring-steunkleur-800">Log in</button>
+          <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Log in</button>
        </a>
       </div>
       
