--- a/src/users/templates/password_reset_form.html
+++ b/src/users/templates/password_reset_form.html
@@ -18,9 +18,9 @@
 
   
         <div>
-          <button type="submit" class="group relative flex w-full justify-center rounded-md border border-transparent bg-steunkleur-700 py-2 px-4 text-sm font-medium text-white hover:bg-steunkleur-400 focus:outline-none focus:ring-2 focus:ring-steunkleur-500 focus:ring-offset-2">
+          <button type="submit" class="group relative flex w-full justify-center rounded-md border border-transparent bg-gray-700 py-2 px-4 text-sm font-medium text-white hover:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2">
             <span class="absolute inset-y-0 left-0 flex items-center pl-3">
-              <svg class="h-5 w-5 text-steunkleur-500 group-hover:text-steunkleur-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <svg class="h-5 w-5 text-gray-500 group-hover:text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
               </svg>
             </span>
